# BobForBots

./: .gitignore  LICENSE  README.md  app.py  bob session.md  requirements-ui.txt
.bob/: mcp.json
.bob/rules/: response-format.md  ros2-workspace-conventions.md
.bob/rules-ros2-architect/: no-assumptions.md
.bob/rules-ros2-docs-architect/: accuracy-over-completeness.md
.bob/rules-ros2-recovery-engineer/: test-generation.md
.streamlit/: config.toml
bob-sessions/: README.md  bob_session_01_architecture.md  bob_session_02_fault_diagnosis.md  bob_session_03_documentation.md  bob_session_04_safety_review.md
bobpilot-pack/.bob/: custom_modes.yaml  mcp.json
bobpilot-pack/.bob/rules-ros2-architect/: explain-node-graph.md
bobpilot-pack/.bob/rules-ros2-docs-architect/: doc-structure.md
bobpilot-pack/.bob/rules-ros2-recovery-engineer/: diagnosis-protocol.md  safe-edit-policy.md
bobpilot-pack/.bob/rules-ros2-safety-reviewer/: safety-checklist.md
bobpilot-ros2-mcp/: demo_run.py  fault_narrator.py  requirements.txt  server.py
demo-robot-workspace/: README.md  SEEDED_FAULTS.md
demo-robot-workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
demo-robot-workspace/install/odometry_health_monitor/share/odometry_health_monitor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
demo-robot-workspace/log/: latest_build  latest_test
demo-robot-workspace/logs/: .gitignore
demo-robot-workspace/src/motion_controller/: CMakeLists.txt  package.xml
demo-robot-workspace/src/motion_controller/config/: params.yaml
demo-robot-workspace/src/motion_controller/include/motion_controller/: motion_controller.hpp
demo-robot-workspace/src/motion_controller/launch/: motion_controller.launch.py
demo-robot-workspace/src/motion_controller/src/: motion_controller.cpp
demo-robot-workspace/src/odometry_health_monitor/: README.md  setup.py
demo-robot-workspace/src/odometry_health_monitor/config/: params.yaml
demo-robot-workspace/src/odometry_health_monitor/launch/: odometry_health_monitor.launch.py
demo-robot-workspace/src/odometry_health_monitor/test/: test_odom_loss_detection.py  test_watchdog.py
demo-robot-workspace/src/safety_manager/: CMakeLists.txt  package.xml
demo-robot-workspace/src/safety_manager/config/: params.yaml
demo-robot-workspace/src/safety_manager/include/safety_manager/: safety_manager.hpp
demo-robot-workspace/src/safety_manager/launch/: safety_manager.launch.py
demo-robot-workspace/src/safety_manager/src/: safety_manager.cpp
demo-robot-workspace/src/task_supervisor/: package.xml  setup.py
demo-robot-workspace/src/task_supervisor/config/: params.yaml  tasks.yaml
demo-robot-workspace/src/task_supervisor/launch/: task_supervisor.launch.py
demo-robot-workspace/src/task_supervisor/task_supervisor/: __init__.py  task_list.py  task_supervisor_node.py
demo_outputs/: groq_cto_summary.md  safety_report.md  tool_results.json
pitch/: demo_script.md
scripts/: README.md  install_python_deps.sh  run_demo_tools.sh  run_mcp_stdio.sh  synth_fault_bag.py
